Removes Django 1.8 alpha from the test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
     py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
-    py2.7-django{1.7,1.8}-{sqlite3,postgresql,mysql}-pylibmc,
-    py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-filebased,
-    py{2.7,3.2,3.3,3.4}-django{1.6,1.7,1.8}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py2.7-django1.7-{sqlite3,postgresql,mysql}-pylibmc,
+    py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
+    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
 
 [testenv]
 basepython =
@@ -16,7 +16,6 @@ deps =
     coverage
     django1.6: Django>=1.6,<1.7
     django1.7: Django>=1.7,<1.8
-    django1.8: Django==1.8a1
     South
     psycopg2
     django-redis
