--- a/tox.ini
+++ b/tox.ini
@@ -18,11 +18,12 @@ deps =
     django1.7: Django>=1.7,<1.8
     South
     psycopg2
-    mysqlclient
     django-redis
     py2.6:           unittest2
+    py{2.6,2.7}:     MySQL-python
     py{2.6,2.7}:     python-memcached
     py{2.6,2.7}:     pylibmc
+    py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
     py{3.2,3.3,3.4}: python3-memcached
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
