Removes Django 1.6 & Python 2.6 from test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,24 @@
 [tox]
 envlist =
-    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
     py2.7-django1.7-{sqlite3,postgresql,mysql}-pylibmc,
     py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
-    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
 
 [testenv]
 basepython =
-    py2.6: python2.6
     py2.7: python2.7
     py3.2: python3.2
     py3.3: python3.3
     py3.4: python3.4
 deps =
     coverage
-    django1.6: Django>=1.6,<1.7
     django1.7: Django>=1.7,<1.8
     South
     psycopg2
     django-redis
-    py2.6:           unittest2
-    py{2.6,2.7}:     MySQL-python
-    py{2.6,2.7}:     python-memcached
-    py{2.6,2.7}:     pylibmc
+    py2.7:           MySQL-python
+    py2.7:           python-memcached
+    py2.7:           pylibmc
     py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
     py{3.2,3.3,3.4}: python3-memcached
 setenv =
