Adds Django 1.8 to the test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist =
-    py2.7-django1.7-{sqlite3,postgresql,mysql}-pylibmc,
-    py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
-    py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py2.7-django{1.7,1.8}-{sqlite3,postgresql,mysql}-pylibmc,
+    py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-{redis,memcached,locmem,filebased},
 
 [testenv]
 basepython =
@@ -13,7 +12,7 @@ basepython =
 deps =
     coverage
     django1.7: Django>=1.7,<1.8
-    South
+    django1.8: Django>=1.8,<1.9
     psycopg2
     django-redis
     py2.7:           MySQL-python
