--- a/.travis.yml
+++ b/.travis.yml
@@ -8,54 +8,105 @@ env:
   - TOXENV=py2.7-django1.7-sqlite3-pylibmc
   - TOXENV=py2.7-django1.7-postgresql-pylibmc
   - TOXENV=py2.7-django1.7-mysql-pylibmc
-  - TOXENV=py2.7-django1.7-sqlite3-filebased
-  - TOXENV=py2.7-django1.7-postgresql-filebased
-  - TOXENV=py2.7-django1.7-mysql-filebased
-  - TOXENV=py3.2-django1.7-sqlite3-filebased
-  - TOXENV=py3.2-django1.7-postgresql-filebased
-  - TOXENV=py3.2-django1.7-mysql-filebased
-  - TOXENV=py3.3-django1.7-sqlite3-filebased
-  - TOXENV=py3.3-django1.7-postgresql-filebased
-  - TOXENV=py3.3-django1.7-mysql-filebased
-  - TOXENV=py3.4-django1.7-sqlite3-filebased
-  - TOXENV=py3.4-django1.7-postgresql-filebased
-  - TOXENV=py3.4-django1.7-mysql-filebased
-  - TOXENV=py2.7-django1.7-sqlite3-locmem
+  - TOXENV=py2.7-django1.8-sqlite3-pylibmc
+  - TOXENV=py2.7-django1.8-postgresql-pylibmc
+  - TOXENV=py2.7-django1.8-mysql-pylibmc
   - TOXENV=py2.7-django1.7-sqlite3-redis
   - TOXENV=py2.7-django1.7-sqlite3-memcached
-  - TOXENV=py2.7-django1.7-postgresql-locmem
+  - TOXENV=py2.7-django1.7-sqlite3-locmem
+  - TOXENV=py2.7-django1.7-sqlite3-filebased
   - TOXENV=py2.7-django1.7-postgresql-redis
   - TOXENV=py2.7-django1.7-postgresql-memcached
-  - TOXENV=py2.7-django1.7-mysql-locmem
+  - TOXENV=py2.7-django1.7-postgresql-locmem
+  - TOXENV=py2.7-django1.7-postgresql-filebased
   - TOXENV=py2.7-django1.7-mysql-redis
   - TOXENV=py2.7-django1.7-mysql-memcached
-  - TOXENV=py3.2-django1.7-sqlite3-locmem
+  - TOXENV=py2.7-django1.7-mysql-locmem
+  - TOXENV=py2.7-django1.7-mysql-filebased
+  - TOXENV=py2.7-django1.8-sqlite3-redis
+  - TOXENV=py2.7-django1.8-sqlite3-memcached
+  - TOXENV=py2.7-django1.8-sqlite3-locmem
+  - TOXENV=py2.7-django1.8-sqlite3-filebased
+  - TOXENV=py2.7-django1.8-postgresql-redis
+  - TOXENV=py2.7-django1.8-postgresql-memcached
+  - TOXENV=py2.7-django1.8-postgresql-locmem
+  - TOXENV=py2.7-django1.8-postgresql-filebased
+  - TOXENV=py2.7-django1.8-mysql-redis
+  - TOXENV=py2.7-django1.8-mysql-memcached
+  - TOXENV=py2.7-django1.8-mysql-locmem
+  - TOXENV=py2.7-django1.8-mysql-filebased
   - TOXENV=py3.2-django1.7-sqlite3-redis
   - TOXENV=py3.2-django1.7-sqlite3-memcached
-  - TOXENV=py3.2-django1.7-postgresql-locmem
+  - TOXENV=py3.2-django1.7-sqlite3-locmem
+  - TOXENV=py3.2-django1.7-sqlite3-filebased
   - TOXENV=py3.2-django1.7-postgresql-redis
   - TOXENV=py3.2-django1.7-postgresql-memcached
-  - TOXENV=py3.2-django1.7-mysql-locmem
+  - TOXENV=py3.2-django1.7-postgresql-locmem
+  - TOXENV=py3.2-django1.7-postgresql-filebased
   - TOXENV=py3.2-django1.7-mysql-redis
   - TOXENV=py3.2-django1.7-mysql-memcached
-  - TOXENV=py3.3-django1.7-sqlite3-locmem
+  - TOXENV=py3.2-django1.7-mysql-locmem
+  - TOXENV=py3.2-django1.7-mysql-filebased
+  - TOXENV=py3.2-django1.8-sqlite3-redis
+  - TOXENV=py3.2-django1.8-sqlite3-memcached
+  - TOXENV=py3.2-django1.8-sqlite3-locmem
+  - TOXENV=py3.2-django1.8-sqlite3-filebased
+  - TOXENV=py3.2-django1.8-postgresql-redis
+  - TOXENV=py3.2-django1.8-postgresql-memcached
+  - TOXENV=py3.2-django1.8-postgresql-locmem
+  - TOXENV=py3.2-django1.8-postgresql-filebased
+  - TOXENV=py3.2-django1.8-mysql-redis
+  - TOXENV=py3.2-django1.8-mysql-memcached
+  - TOXENV=py3.2-django1.8-mysql-locmem
+  - TOXENV=py3.2-django1.8-mysql-filebased
   - TOXENV=py3.3-django1.7-sqlite3-redis
   - TOXENV=py3.3-django1.7-sqlite3-memcached
-  - TOXENV=py3.3-django1.7-postgresql-locmem
+  - TOXENV=py3.3-django1.7-sqlite3-locmem
+  - TOXENV=py3.3-django1.7-sqlite3-filebased
   - TOXENV=py3.3-django1.7-postgresql-redis
   - TOXENV=py3.3-django1.7-postgresql-memcached
-  - TOXENV=py3.3-django1.7-mysql-locmem
+  - TOXENV=py3.3-django1.7-postgresql-locmem
+  - TOXENV=py3.3-django1.7-postgresql-filebased
   - TOXENV=py3.3-django1.7-mysql-redis
   - TOXENV=py3.3-django1.7-mysql-memcached
-  - TOXENV=py3.4-django1.7-sqlite3-locmem
+  - TOXENV=py3.3-django1.7-mysql-locmem
+  - TOXENV=py3.3-django1.7-mysql-filebased
+  - TOXENV=py3.3-django1.8-sqlite3-redis
+  - TOXENV=py3.3-django1.8-sqlite3-memcached
+  - TOXENV=py3.3-django1.8-sqlite3-locmem
+  - TOXENV=py3.3-django1.8-sqlite3-filebased
+  - TOXENV=py3.3-django1.8-postgresql-redis
+  - TOXENV=py3.3-django1.8-postgresql-memcached
+  - TOXENV=py3.3-django1.8-postgresql-locmem
+  - TOXENV=py3.3-django1.8-postgresql-filebased
+  - TOXENV=py3.3-django1.8-mysql-redis
+  - TOXENV=py3.3-django1.8-mysql-memcached
+  - TOXENV=py3.3-django1.8-mysql-locmem
+  - TOXENV=py3.3-django1.8-mysql-filebased
   - TOXENV=py3.4-django1.7-sqlite3-redis
   - TOXENV=py3.4-django1.7-sqlite3-memcached
-  - TOXENV=py3.4-django1.7-postgresql-locmem
+  - TOXENV=py3.4-django1.7-sqlite3-locmem
+  - TOXENV=py3.4-django1.7-sqlite3-filebased
   - TOXENV=py3.4-django1.7-postgresql-redis
   - TOXENV=py3.4-django1.7-postgresql-memcached
-  - TOXENV=py3.4-django1.7-mysql-locmem
+  - TOXENV=py3.4-django1.7-postgresql-locmem
+  - TOXENV=py3.4-django1.7-postgresql-filebased
   - TOXENV=py3.4-django1.7-mysql-redis
   - TOXENV=py3.4-django1.7-mysql-memcached
+  - TOXENV=py3.4-django1.7-mysql-locmem
+  - TOXENV=py3.4-django1.7-mysql-filebased
+  - TOXENV=py3.4-django1.8-sqlite3-redis
+  - TOXENV=py3.4-django1.8-sqlite3-memcached
+  - TOXENV=py3.4-django1.8-sqlite3-locmem
+  - TOXENV=py3.4-django1.8-sqlite3-filebased
+  - TOXENV=py3.4-django1.8-postgresql-redis
+  - TOXENV=py3.4-django1.8-postgresql-memcached
+  - TOXENV=py3.4-django1.8-postgresql-locmem
+  - TOXENV=py3.4-django1.8-postgresql-filebased
+  - TOXENV=py3.4-django1.8-mysql-redis
+  - TOXENV=py3.4-django1.8-mysql-memcached
+  - TOXENV=py3.4-django1.8-mysql-locmem
+  - TOXENV=py3.4-django1.8-mysql-filebased
 
 sudo: false
 
