--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,11 @@ basepython =
 deps =
     coverage
     django1.6: Django>=1.6,<1.7
+    django1.6: South
+    django1.6: django-redis<4
     django1.7: Django>=1.7,<1.8
-    South
+    django1.7: django-redis>=4.0.0
     psycopg2
-    django-redis
     py2.6:           unittest2
     py{2.6,2.7}:     MySQL-python
     py{2.6,2.7}:     python-memcached
