Downgrades coverage for Python 3.2.

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,6 @@ basepython =
     py3.3: python3.3
     py3.4: python3.4
 deps =
-    coverage
     django1.7: Django>=1.7,<1.8
     django1.8: Django>=1.8,<1.9
     psycopg2
@@ -20,6 +19,8 @@ deps =
     py2.7:           pylibmc
     py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
     py{3.2,3.3,3.4}: python3-memcached
+    py3.2: coverage<4.0
+    py{2.7,3.3,3.4}: coverage
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
