--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
     django1.8: Django>=1.8,<1.9
     psycopg2
     django-redis
+    pytz
     py2.7:           MySQL-python
     py2.7:           python-memcached
     py2.7:           pylibmc
