--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,7 @@ sudo: false
 install: pip install tox coveralls
 
 before_script:
-  - psql -c 'CREATE USER cachalot CREATEDB;' -U postgres
+  - psql -c 'CREATE USER cachalot SUPERUSER;' -U postgres
   - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
   - mysql -u root -e 'CREATE DATABASE cachalot;'
 
