Adds Django 1.9 to the test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     py2.7-django{1.7,1.8}-{sqlite3,postgresql,mysql}-pylibmc,
     py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-{redis,memcached,locmem,filebased},
+    py{2.7,3.4,3.5}-django1.9-{sqlite3,postgresql,mysql}-{redis,memcached,locmem,filebased},
 
 [testenv]
 basepython =
@@ -9,19 +10,21 @@ basepython =
     py3.2: python3.2
     py3.3: python3.3
     py3.4: python3.4
+    py3.5: python3.5
 deps =
     django1.7: Django>=1.7,<1.8
     django1.8: Django>=1.8,<1.9
+    django1.9: Django>=1.9,<1.10
     psycopg2
     django-redis
     pytz
     py2.7:           MySQL-python
     py2.7:           python-memcached
     py2.7:           pylibmc
-    py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
-    py{3.2,3.3,3.4}: python3-memcached
+    py{3.2,3.3,3.4,3.5}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
+    py{3.2,3.3,3.4,3.5}: python3-memcached
     py3.2: coverage<4.0
-    py{2.7,3.3,3.4}: coverage
+    py{2.7,3.3,3.4,3.5}: coverage
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
