--- a/.travis.yml
+++ b/.travis.yml
@@ -110,6 +110,42 @@ env:
   - TOXENV=py3.4-django1.8-mysql-memcached
   - TOXENV=py3.4-django1.8-mysql-locmem
   - TOXENV=py3.4-django1.8-mysql-filebased
+  - TOXENV=py2.7-django1.9-sqlite3-redis
+  - TOXENV=py2.7-django1.9-sqlite3-memcached
+  - TOXENV=py2.7-django1.9-sqlite3-locmem
+  - TOXENV=py2.7-django1.9-sqlite3-filebased
+  - TOXENV=py2.7-django1.9-postgresql-redis
+  - TOXENV=py2.7-django1.9-postgresql-memcached
+  - TOXENV=py2.7-django1.9-postgresql-locmem
+  - TOXENV=py2.7-django1.9-postgresql-filebased
+  - TOXENV=py2.7-django1.9-mysql-redis
+  - TOXENV=py2.7-django1.9-mysql-memcached
+  - TOXENV=py2.7-django1.9-mysql-locmem
+  - TOXENV=py2.7-django1.9-mysql-filebased
+  - TOXENV=py3.4-django1.9-sqlite3-redis
+  - TOXENV=py3.4-django1.9-sqlite3-memcached
+  - TOXENV=py3.4-django1.9-sqlite3-locmem
+  - TOXENV=py3.4-django1.9-sqlite3-filebased
+  - TOXENV=py3.4-django1.9-postgresql-redis
+  - TOXENV=py3.4-django1.9-postgresql-memcached
+  - TOXENV=py3.4-django1.9-postgresql-locmem
+  - TOXENV=py3.4-django1.9-postgresql-filebased
+  - TOXENV=py3.4-django1.9-mysql-redis
+  - TOXENV=py3.4-django1.9-mysql-memcached
+  - TOXENV=py3.4-django1.9-mysql-locmem
+  - TOXENV=py3.4-django1.9-mysql-filebased
+  - TOXENV=py3.5-django1.9-sqlite3-redis
+  - TOXENV=py3.5-django1.9-sqlite3-memcached
+  - TOXENV=py3.5-django1.9-sqlite3-locmem
+  - TOXENV=py3.5-django1.9-sqlite3-filebased
+  - TOXENV=py3.5-django1.9-postgresql-redis
+  - TOXENV=py3.5-django1.9-postgresql-memcached
+  - TOXENV=py3.5-django1.9-postgresql-locmem
+  - TOXENV=py3.5-django1.9-postgresql-filebased
+  - TOXENV=py3.5-django1.9-mysql-redis
+  - TOXENV=py3.5-django1.9-mysql-memcached
+  - TOXENV=py3.5-django1.9-mysql-locmem
+  - TOXENV=py3.5-django1.9-mysql-filebased
 
 sudo: false
 
