Updates test requirements to the latest Python 3 compatible ones.

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist =
-    py2.7-django{1.7,1.8}-{sqlite3,postgresql,mysql}-pylibmc,
-    py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-{redis,memcached,locmem,filebased},
-    py{2.7,3.4,3.5}-django1.9-{sqlite3,postgresql,mysql}-{redis,memcached,locmem,filebased},
+    py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.4,3.5}-django1.9-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -16,13 +15,11 @@ deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
     psycopg2
+    mysqlclient
     django-redis
+    python-memcached
+    pylibmc
     pytz
-    py2.7:           MySQL-python
-    py2.7:           python-memcached
-    py2.7:           pylibmc
-    py{3.2,3.3,3.4,3.5}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
-    py{3.2,3.3,3.4,3.5}: python3-memcached
     py3.2: coverage<4.0
     py{2.7,3.3,3.4,3.5}: coverage
 setenv =
