--- a/tox.ini
+++ b/tox.ini
@@ -15,13 +15,14 @@ deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
     psycopg2
-    mysqlclient
     django-redis
     python-memcached
     pylibmc
     pytz
-    py3.2: coverage<4.0
     py{2.7,3.3,3.4,3.5}: coverage
+    py{2.7,3.3,3.4,3.5}: mysqlclient
+    py3.2: coverage<4.0
+    py3.2: https://github.com/clelland/MySQL-for-Python-3/tarball/master
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
