--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 # We say we use Python 3.5 otherwise we only access by default
-# to Python 2.7, 3.2, 3.3, & 3.4
+# to Python 2.7, 3.3, & 3.4
 
 python: 3.5
 
@@ -13,21 +13,6 @@ addons:
   postgresql: 9.4
 
 env:
-  - TOXENV=py2.7-django1.7-sqlite3-redis
-  - TOXENV=py2.7-django1.7-sqlite3-memcached
-  - TOXENV=py2.7-django1.7-sqlite3-pylibmc
-  - TOXENV=py2.7-django1.7-sqlite3-locmem
-  - TOXENV=py2.7-django1.7-sqlite3-filebased
-  - TOXENV=py2.7-django1.7-postgresql-redis
-  - TOXENV=py2.7-django1.7-postgresql-memcached
-  - TOXENV=py2.7-django1.7-postgresql-pylibmc
-  - TOXENV=py2.7-django1.7-postgresql-locmem
-  - TOXENV=py2.7-django1.7-postgresql-filebased
-  - TOXENV=py2.7-django1.7-mysql-redis
-  - TOXENV=py2.7-django1.7-mysql-memcached
-  - TOXENV=py2.7-django1.7-mysql-pylibmc
-  - TOXENV=py2.7-django1.7-mysql-locmem
-  - TOXENV=py2.7-django1.7-mysql-filebased
   - TOXENV=py2.7-django1.8-sqlite3-redis
   - TOXENV=py2.7-django1.8-sqlite3-memcached
   - TOXENV=py2.7-django1.8-sqlite3-pylibmc
@@ -43,51 +28,6 @@ env:
   - TOXENV=py2.7-django1.8-mysql-pylibmc
   - TOXENV=py2.7-django1.8-mysql-locmem
   - TOXENV=py2.7-django1.8-mysql-filebased
-  - TOXENV=py3.2-django1.7-sqlite3-redis
-  - TOXENV=py3.2-django1.7-sqlite3-memcached
-  - TOXENV=py3.2-django1.7-sqlite3-pylibmc
-  - TOXENV=py3.2-django1.7-sqlite3-locmem
-  - TOXENV=py3.2-django1.7-sqlite3-filebased
-  - TOXENV=py3.2-django1.7-postgresql-redis
-  - TOXENV=py3.2-django1.7-postgresql-memcached
-  - TOXENV=py3.2-django1.7-postgresql-pylibmc
-  - TOXENV=py3.2-django1.7-postgresql-locmem
-  - TOXENV=py3.2-django1.7-postgresql-filebased
-  - TOXENV=py3.2-django1.7-mysql-redis
-  - TOXENV=py3.2-django1.7-mysql-memcached
-  - TOXENV=py3.2-django1.7-mysql-pylibmc
-  - TOXENV=py3.2-django1.7-mysql-locmem
-  - TOXENV=py3.2-django1.7-mysql-filebased
-  - TOXENV=py3.2-django1.8-sqlite3-redis
-  - TOXENV=py3.2-django1.8-sqlite3-memcached
-  - TOXENV=py3.2-django1.8-sqlite3-pylibmc
-  - TOXENV=py3.2-django1.8-sqlite3-locmem
-  - TOXENV=py3.2-django1.8-sqlite3-filebased
-  - TOXENV=py3.2-django1.8-postgresql-redis
-  - TOXENV=py3.2-django1.8-postgresql-memcached
-  - TOXENV=py3.2-django1.8-postgresql-pylibmc
-  - TOXENV=py3.2-django1.8-postgresql-locmem
-  - TOXENV=py3.2-django1.8-postgresql-filebased
-  - TOXENV=py3.2-django1.8-mysql-redis
-  - TOXENV=py3.2-django1.8-mysql-memcached
-  - TOXENV=py3.2-django1.8-mysql-pylibmc
-  - TOXENV=py3.2-django1.8-mysql-locmem
-  - TOXENV=py3.2-django1.8-mysql-filebased
-  - TOXENV=py3.3-django1.7-sqlite3-redis
-  - TOXENV=py3.3-django1.7-sqlite3-memcached
-  - TOXENV=py3.3-django1.7-sqlite3-pylibmc
-  - TOXENV=py3.3-django1.7-sqlite3-locmem
-  - TOXENV=py3.3-django1.7-sqlite3-filebased
-  - TOXENV=py3.3-django1.7-postgresql-redis
-  - TOXENV=py3.3-django1.7-postgresql-memcached
-  - TOXENV=py3.3-django1.7-postgresql-pylibmc
-  - TOXENV=py3.3-django1.7-postgresql-locmem
-  - TOXENV=py3.3-django1.7-postgresql-filebased
-  - TOXENV=py3.3-django1.7-mysql-redis
-  - TOXENV=py3.3-django1.7-mysql-memcached
-  - TOXENV=py3.3-django1.7-mysql-pylibmc
-  - TOXENV=py3.3-django1.7-mysql-locmem
-  - TOXENV=py3.3-django1.7-mysql-filebased
   - TOXENV=py3.3-django1.8-sqlite3-redis
   - TOXENV=py3.3-django1.8-sqlite3-memcached
   - TOXENV=py3.3-django1.8-sqlite3-pylibmc
@@ -103,21 +43,6 @@ env:
   - TOXENV=py3.3-django1.8-mysql-pylibmc
   - TOXENV=py3.3-django1.8-mysql-locmem
   - TOXENV=py3.3-django1.8-mysql-filebased
-  - TOXENV=py3.4-django1.7-sqlite3-redis
-  - TOXENV=py3.4-django1.7-sqlite3-memcached
-  - TOXENV=py3.4-django1.7-sqlite3-pylibmc
-  - TOXENV=py3.4-django1.7-sqlite3-locmem
-  - TOXENV=py3.4-django1.7-sqlite3-filebased
-  - TOXENV=py3.4-django1.7-postgresql-redis
-  - TOXENV=py3.4-django1.7-postgresql-memcached
-  - TOXENV=py3.4-django1.7-postgresql-pylibmc
-  - TOXENV=py3.4-django1.7-postgresql-locmem
-  - TOXENV=py3.4-django1.7-postgresql-filebased
-  - TOXENV=py3.4-django1.7-mysql-redis
-  - TOXENV=py3.4-django1.7-mysql-memcached
-  - TOXENV=py3.4-django1.7-mysql-pylibmc
-  - TOXENV=py3.4-django1.7-mysql-locmem
-  - TOXENV=py3.4-django1.7-mysql-filebased
   - TOXENV=py3.4-django1.8-sqlite3-redis
   - TOXENV=py3.4-django1.8-sqlite3-memcached
   - TOXENV=py3.4-django1.8-sqlite3-pylibmc
@@ -133,6 +58,21 @@ env:
   - TOXENV=py3.4-django1.8-mysql-pylibmc
   - TOXENV=py3.4-django1.8-mysql-locmem
   - TOXENV=py3.4-django1.8-mysql-filebased
+  - TOXENV=py3.5-django1.8-sqlite3-redis
+  - TOXENV=py3.5-django1.8-sqlite3-memcached
+  - TOXENV=py3.5-django1.8-sqlite3-pylibmc
+  - TOXENV=py3.5-django1.8-sqlite3-locmem
+  - TOXENV=py3.5-django1.8-sqlite3-filebased
+  - TOXENV=py3.5-django1.8-postgresql-redis
+  - TOXENV=py3.5-django1.8-postgresql-memcached
+  - TOXENV=py3.5-django1.8-postgresql-pylibmc
+  - TOXENV=py3.5-django1.8-postgresql-locmem
+  - TOXENV=py3.5-django1.8-postgresql-filebased
+  - TOXENV=py3.5-django1.8-mysql-redis
+  - TOXENV=py3.5-django1.8-mysql-memcached
+  - TOXENV=py3.5-django1.8-mysql-pylibmc
+  - TOXENV=py3.5-django1.8-mysql-locmem
+  - TOXENV=py3.5-django1.8-mysql-filebased
   - TOXENV=py2.7-django1.9-sqlite3-redis
   - TOXENV=py2.7-django1.9-sqlite3-memcached
   - TOXENV=py2.7-django1.9-sqlite3-pylibmc
