--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,15 @@
 [tox]
 envlist =
-    py{2.7,3.2,3.3,3.4}-django{1.7,1.8}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.3,3.4,3.5}-django1.8-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{2.7,3.4,3.5}-django1.9-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
     py2.7: python2.7
-    py3.2: python3.2
     py3.3: python3.3
     py3.4: python3.4
     py3.5: python3.5
 deps =
-    django1.7: Django>=1.7,<1.8
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
     psycopg2
@@ -21,8 +19,6 @@ deps =
     pytz
     py{2.7,3.3,3.4,3.5}: coverage
     py{2.7,3.3,3.4,3.5}: mysqlclient
-    py3.2: coverage<4.0
-    py3.2: https://github.com/clelland/MySQL-for-Python-3/tarball/master
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
