--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{2.7,3.3,3.4,3.5}-django1.8-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{2.7,3.4,3.5}-django1.9-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py3.3-django1.8-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.4,3.5}-django{1.8,1.9,1.10}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -12,6 +12,7 @@ basepython =
 deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
+    django1.10: Django==1.10rc1
     psycopg2
     django-redis
     python-memcached
