--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ deps =
     psycopg2
     django-redis
     python-memcached
-    pylibmc==1.5.0  # FIXME: Remove the version when this is fixed: https://github.com/lericson/pylibmc/issues/216
+    # FIXME: Remove the version when this is fixed: https://github.com/lericson/pylibmc/issues/216
+    pylibmc==1.5.0
     pytz
     py{2.7,3.3,3.4,3.5}: coverage
     py{2.7,3.3,3.4,3.5}: mysqlclient
