--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ basepython =
 deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
-    django1.10: Django==1.10rc1
+    django1.10: Django>=1.10,<1.11
     psycopg2
     django-redis
     python-memcached
