--- a/tox.ini
+++ b/tox.ini
@@ -14,13 +14,14 @@ deps =
     django1.9: Django>=1.9,<1.10
     django1.10: Django>=1.10,<1.11
     psycopg2
+    mysqlclient
     django-redis
     python-memcached
     # FIXME: Remove the version when this is fixed: https://github.com/lericson/pylibmc/issues/216
     pylibmc==1.5.0
     pytz
-    py{2.7,3.3,3.4,3.5}: coverage
-    py{2.7,3.3,3.4,3.5}: mysqlclient
+    jinja2
+    coverage
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
