Adds missing requirements to tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ deps =
     # FIXME: Remove the version when this is fixed: https://github.com/lericson/pylibmc/issues/216
     pylibmc==1.5.0
     pytz
-    jinja2
+    Jinja2
+    django-debug-toolbar
+    beautifulsoup4
     coverage
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
