Remove version since pylibmc issue has been fixed

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,7 @@ deps =
     mysqlclient
     django-redis
     python-memcached
-    # FIXME: Remove the version when this is fixed: https://github.com/lericson/pylibmc/issues/216
-    pylibmc==1.5.0
+    pylibmc
     pytz
     Jinja2
     django-debug-toolbar
