Removes Python 3.6 with Django 1.8 & 1.10.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py{2.7,3.4,3.5,3.6}-django{1.8,1.10,1.11}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.4,3.5}-django{1.8,1.10,1.11}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py3.6-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
