--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py{2.7,3.4,3.5}-django{1.8,1.10,1.11}-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py3.6-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.4,3.5,3.6}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -10,8 +9,6 @@ basepython =
     py3.5: python3.5
     py3.6: python3.6
 deps =
-    django1.8: Django>=1.8,<1.9
-    django1.10: Django>=1.10,<1.11
     django1.11: Django>=1.11,<1.12
     psycopg2
     mysqlclient
