Adds Django 2.0 support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     py{2.7,3.4,3.5,3.6}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{3.4,3.5,3.6}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -10,6 +11,8 @@ basepython =
     py3.6: python3.6
 deps =
     django1.11: Django>=1.11,<1.12
+    django2.0: Django>=2.0,<2.1
+    # TODO: Switch to psycopg2-binary when psycopg/psycopg2#708 is fixed.
     psycopg2
     mysqlclient
     django-redis
