--- a/.travis.yml
+++ b/.travis.yml
@@ -131,6 +131,126 @@ matrix:
       env: TOXENV=py3.6-django1.11-mysql-locmem
     - python: 3.6
       env: TOXENV=py3.6-django1.11-mysql-filebased
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-sqlite3-redis
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-sqlite3-memcached
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-sqlite3-pylibmc
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-sqlite3-locmem
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-sqlite3-filebased
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-postgresql-redis
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-postgresql-memcached
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-postgresql-pylibmc
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-postgresql-locmem
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-postgresql-filebased
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-mysql-redis
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-mysql-memcached
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-mysql-pylibmc
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-mysql-locmem
+    - python: 2.7
+      env: TOXENV=py2.7-django2.0-mysql-filebased
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-sqlite3-redis
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-sqlite3-memcached
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-sqlite3-pylibmc
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-sqlite3-locmem
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-sqlite3-filebased
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-postgresql-redis
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-postgresql-memcached
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-postgresql-pylibmc
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-postgresql-locmem
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-postgresql-filebased
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-mysql-redis
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-mysql-memcached
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-mysql-pylibmc
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-mysql-locmem
+    - python: 3.4
+      env: TOXENV=py3.4-django2.0-mysql-filebased
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-sqlite3-redis
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-sqlite3-memcached
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-sqlite3-pylibmc
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-sqlite3-locmem
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-sqlite3-filebased
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-postgresql-redis
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-postgresql-memcached
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-postgresql-pylibmc
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-postgresql-locmem
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-postgresql-filebased
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-mysql-redis
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-mysql-memcached
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-mysql-pylibmc
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-mysql-locmem
+    - python: 3.5
+      env: TOXENV=py3.5-django2.0-mysql-filebased
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-sqlite3-redis
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-sqlite3-memcached
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-sqlite3-pylibmc
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-sqlite3-locmem
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-sqlite3-filebased
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-postgresql-redis
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-postgresql-memcached
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-postgresql-pylibmc
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-postgresql-locmem
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-postgresql-filebased
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-mysql-redis
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-mysql-memcached
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-mysql-pylibmc
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-mysql-locmem
+    - python: 3.6
+      env: TOXENV=py3.6-django2.0-mysql-filebased
 
 sudo: false
 
