Fixes the HStore issue in tests.

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,7 @@ basepython =
 deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
-    # TODO: Switch to psycopg2-binary when psycopg/psycopg2#708 is fixed.
-    psycopg2
+    psycopg2-binary
     mysqlclient
     django-redis
     python-memcached
