--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ basepython =
     py3.4: python3.4
     py3.5: python3.5
     py3.6: python3.6
+    py3.7: python3.7
 deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
