Added mysql as a service to fix Travis CI

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,8 @@ deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
     django2.1: Django>=2.0,<2.2
+    django2.2: Django>=2.2,<2.3
+    django3.0: Django>=3.0,<3.1
     psycopg2-binary
     mysqlclient
     django-redis
